--- a/.github/workflows/test-targets-workflow.yml
+++ b/.github/workflows/test-targets-workflow.yml
@@ -25,10 +25,10 @@ jobs:
         run: |
           git config --global --add safe.directory /__w/d4dm-management/d4dm-management
           
-      - name: Decrypt repository using symmetric key
-        run: |
-          echo $GIT_CRYPT_KEY64 > git_crypt_key.key64 && base64 -di git_crypt_key.key64 > git_crypt_key.key && git-crypt unlock git_crypt_key.key
-          rm git_crypt_key.key git_crypt_key.key64
+      #- name: Decrypt repository using symmetric key
+      #  run: |
+      #    echo $GIT_CRYPT_KEY64 > git_crypt_key.key64 && base64 -di git_crypt_key.key64 > git_crypt_key.key && git-crypt unlock git_crypt_key.key
+      #    rm git_crypt_key.key git_crypt_key.key64
 
       - name: Install packages from renv.lock (with cache)
         if: ${{ !env.ACT }}  
